# enaible

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  analysis-improvements-plan.md  mypy.ini  next-session.md  opencode.json  orchestrate-issues.md  plugin-log.md  pytest.ini  requirements-dev.txt  session-notes.md
.githooks/: pre-commit
.github/: dependabot.yml
claude-code/: install.ps1  install.sh  linear-plan.config.json  uninstall.sh
codex/: .zshrc  codex-init-helpers.md  config.toml  install.ps1  install.sh  (+1 more)
tools/enaible/: pyproject.toml
tools/enaible/.github/: dependabot.yml
tools/enaible/.github/workflows/: package-audit.yml
tools/enaible/scripts/: bump_prompt_version.py
tools/enaible/src/enaible/: __init__.py  __main__.py  app.py  constants.py
tools/enaible/src/enaible/commands/: __init__.py  analyzers.py  ci.py  install.py  prompts.py  root.py  setup.py  skills.py  workflows.py
tools/enaible/src/enaible/models/: results.py
tools/enaible/src/enaible/prompts/: adapters.py  catalog.py  lint.py  renderer.py  utils.py
tools/enaible/src/enaible/runtime/: context.py
tools/enaible/src/enaible/skills/: __init__.py  catalog.py  lint.py  renderer.py  utils.py
tools/enaible/src/enaible/utils/: __init__.py  paths.py
tools/enaible/src/enaible/workflows/: __init__.py  agentic_readiness.py
tools/enaible/tests/: conftest.py  test_analyzers_commands.py  test_cli_doctor.py  test_cli_integration_commands.py  test_cli_smoke.py  test_install_command.py  test_paths_utils.py  test_prompt_utils.py  test_prompts_commands.py  test_prompts_renderer.py  test_skills_commands.py  test_skills_integration.py
tools/parallel/: pyproject.toml
tools/parallel/src/parallel/: __init__.py  __main__.py  app.py  client.py  config.py
tools/parallel/src/parallel/commands/: __init__.py  extract.py  findall.py  search.py  status.py  task.py
(+996 files in other folders)
