[project]
name = "parallel"
version = "0.1.0"
description = "CLI for Parallel AI Web Intelligence"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer>=0.18,<0.19",
    "httpx>=0.27,<0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.5,<0.6",
]

[project.scripts]
parallel = "parallel.__main__:app"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
namespace_packages = true
packages = ["parallel"]
